--- a/homeC1.html
+++ b/homeC1.html
@@ -314,7 +314,7 @@
                    <div class="px-4">
                         <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 122 LBS / 55.3 KG
                         </p>
-                        <img src="./img/Player/OLEKSANDR USYK (4).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <img src="./img/Player/OLEKSANDR USYK (9).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
                             <p class="text-sm md:text-2xl lg:text-2xl">NAOYA 'MONSTER' INOUE
                             </p>
@@ -332,7 +332,7 @@
                    <div class="px-4">
                         <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 118 LBS / 53.5 KG
                         </p>
-                        <img src="./img/Player/OLEKSANDR USYK (5).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <img src="./img/Player/OLEKSANDR USYK (10).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
                             <p class="text-sm md:text-2xl lg:text-2xl">JUNTO NAKATANI
                             </p>
@@ -350,7 +350,7 @@
                    <div class="px-4">
                         <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 115 LBS / 52.1 KG
                         </p>
-                        <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <img src="./img/Player/OLEKSANDR USYK (11).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
                             <p class="text-sm md:text-2xl lg:text-2xl">JESSE 'BAM' RODRIGUEZ
                             </p>
@@ -359,6 +359,62 @@
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
                             <h2>20 - 0 (13 KO)</h2>
+                        </div>
+                   </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 my-6">
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">FLYWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 112 LBS / 51 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (12).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">SUNNY 'SHOWTIME' EDWARDS
+                            </p>
+                            <img src="./img/Player/flag/ENGLAND FLAG.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>21 - 1 (4 KO)</h2>
+                        </div>
+                   </div>
+                </div>
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR FLYWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 108 LBS / 49 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (13).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">KENSHIRO 'THE AMAZING BOY' TERAJI
+                            </p>
+                            <img src="./img/Player/flag/JAPAN FLAG.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>23 - 1 (14 KO)</h2>
+                        </div>
+                   </div>
+                </div>
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">STRAWWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 105 LBS / 47.6 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (14).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">OSCAR 'EL PUPILO' COLLAZO
+                            </p>
+                            <img src="./img/Player/flag/Puerto Rico.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>10 - 0 (7 KO)</h2>
                         </div>
                    </div>
                 </div>
