added figs file

--- a/homeC1.html
+++ b/homeC1.html
@@ -33,9 +33,9 @@
                 <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2 text-center flex justify-center">
                     Select Language <img src="./img/Vector.png" class="" alt="">
                 </button>
-                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
+                <a href="/faqs.html" class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 text-center">
                     FREQUENTLY ASKED QUESTIONS
-                </button>
+                </a>
              </div>  
         </div>
 
