--- a/faqs.html
+++ b/faqs.html
@@ -67,12 +67,35 @@
               </div>    
         </div>
          
-         <!-- Rankings  -->
+    <!-- Figs started  -->
         <div class="bg-gray-50 shadow-xl">
             <div class="flex">
                 <h2 class="py-12 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#101010] font-semibold">Frequently Asked Questions</h2>
             </div>
         </div>
+
+        <div class="py-10 px-12 xl:px-36">
+            <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-3">General</h2>
+            <div class="">
+                <a href="#" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> <br>
+                <a href="#" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
+            </div>
+        </div>
+        <div class="bg-gray-50">
+            <div class="py-10 px-12 xl:px-36">
+                <div>
+                    <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: What services does your company provide?</h2>
+                    <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                    <hr class="border-1 border-gray-300 my-6">
+                </div>
+                <div>
+                    <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: What services does your company provide?</h2>
+                    <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                    <hr class="border-1 border-gray-300 my-6">
+                </div>
+            </div>
+        </div>
+
 
         <!-- FooterUp Section  -->
         <div class="py-10 px-12 xl:px-36">
