--- a/faqs.html
+++ b/faqs.html
@@ -74,24 +74,30 @@
             </div>
         </div>
 
-        <div class="py-10 px-12 xl:px-36">
-            <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-3">General</h2>
-            <div class="">
-                <a href="#" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> <br>
-                <a href="#" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
-            </div>
-        </div>
-        <div class="bg-gray-50">
+        <div>
             <div class="py-10 px-12 xl:px-36">
-                <div>
-                    <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: What services does your company provide?</h2>
-                    <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
-                    <hr class="border-1 border-gray-300 my-6">
+                <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">General</h2>
+                <div class="">
+                    <div>
+                        <a href="#ans1" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> 
+                    </div>
+                   <div class="my-2">
+                        <a href="#ans2" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
+                   </div>
                 </div>
-                <div>
-                    <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: What services does your company provide?</h2>
-                    <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
-                    <hr class="border-1 border-gray-300 my-6">
+            </div>
+            <div class="bg-gray-50">
+                <div class="py-10 px-12 xl:px-36">
+                    <div id="ans1">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: What services does your company provide?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
+                    <div id="ans2">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
                 </div>
             </div>
         </div>
