--- a/faqs.html
+++ b/faqs.html
@@ -84,6 +84,24 @@
                    <div class="my-2">
                         <a href="#ans2" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
                    </div>
+                   <div class="my-2">
+                        <a href="#ans3" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer customer support?</a>
+                   </div>
+                   <div class="my-2">
+                        <a href="#ans4" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What is your pricing structure?</a>
+                   </div>
+                   <div class="my-2">
+                        <a href="#ans5" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How experienced is your team?</a>
+                   </div>
+                   <div class="my-2">
+                        <a href="#ans6" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What industries do you serve?</a>
+                   </div>
+                   <div class="my-2">
+                        <a href="#ans7" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer custom solutions?</a>
+                   </div>
+                   <div class="my-2">
+                        <a href="#ans8" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How secure is the data with your services?</a>
+                   </div>
                 </div>
             </div>
             <div class="bg-gray-50">
@@ -98,10 +116,39 @@
                         <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
                         <hr class="border-1 border-gray-300 my-6">
                     </div>
+                    <div id="ans3">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
+                    <div id="ans4">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
+                    <div id="ans5">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
+                    <div id="ans6">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
+                    <div id="ans7">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
+                    <div id="ans8">
+                        <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
+                        <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
+                        <hr class="border-1 border-gray-300 my-6">
+                    </div>
                 </div>
             </div>
         </div>
-
 
         <!-- FooterUp Section  -->
         <div class="py-10 px-12 xl:px-36">
