--- a/faqs.html
+++ b/faqs.html
@@ -76,32 +76,92 @@
 
         <div>
             <div class="py-10 px-12 xl:px-36">
-                <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">General</h2>
-                <div class="">
-                    <div>
-                        <a href="#ans1" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> 
+                <div>
+                    <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">General</h2>
+                    <div class="">
+                        <div>
+                            <a href="#ans1" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> 
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans2" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans3" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer customer support?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans4" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What is your pricing structure?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans5" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How experienced is your team?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans6" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What industries do you serve?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans7" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer custom solutions?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans8" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How secure is the data with your services?</a>
+                        </div>
                     </div>
-                   <div class="my-2">
-                        <a href="#ans2" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
-                   </div>
-                   <div class="my-2">
-                        <a href="#ans3" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer customer support?</a>
-                   </div>
-                   <div class="my-2">
-                        <a href="#ans4" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What is your pricing structure?</a>
-                   </div>
-                   <div class="my-2">
-                        <a href="#ans5" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How experienced is your team?</a>
-                   </div>
-                   <div class="my-2">
-                        <a href="#ans6" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What industries do you serve?</a>
-                   </div>
-                   <div class="my-2">
-                        <a href="#ans7" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer custom solutions?</a>
-                   </div>
-                   <div class="my-2">
-                        <a href="#ans8" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How secure is the data with your services?</a>
-                   </div>
+                </div>
+                <div>
+                    <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">Polls</h2>
+                    <div class="">
+                        <div>
+                            <a href="#ans1" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> 
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans2" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans3" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer customer support?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans4" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What is your pricing structure?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans5" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How experienced is your team?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans6" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What industries do you serve?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans7" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer custom solutions?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans8" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How secure is the data with your services?</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">General</h2>
+                    <div class="">
+                        <div>
+                            <a href="#ans1" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> 
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans2" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How can I get started with your services?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans3" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer customer support?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans4" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What is your pricing structure?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans5" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How experienced is your team?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans6" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What industries do you serve?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans7" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: Do you offer custom solutions?</a>
+                        </div>
+                        <div class="my-2">
+                                <a href="#ans8" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: How secure is the data with your services?</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="bg-gray-50">
