added surveys question

--- a/faqs.html
+++ b/faqs.html
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div>
-                    <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">General</h2>
+                    <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">Surveys</h2>
                     <div class="">
                         <div>
                             <a href="#ans1" class="underline text-xl md:text-2xl lg:text-2xl my-3">Q: What services does your company provide?</a> 
