--- a/faqs.html
+++ b/faqs.html
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="my-6">
                     <h2 class="text-2xl lg:text-4xl md:text-4xl font-semibold mb-4">Polls</h2>
                     <div class="">
                         <div>
