--- a/faqs.html
+++ b/faqs.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-gray-50">
+            <div class="bg-gray-50 shadow">
                 <div class="py-10 px-12 xl:px-36">
                     <div id="ans1">
                         <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: What services does your company provide?</h2>
@@ -204,7 +204,6 @@
                     <div id="ans8">
                         <h2 class="text-xl md:text-2xl lg:text-2xl font-semibold mb-4">Q: How can I get started with your services?</h2>
                         <p class="text-xl md:text-2xl lg:text-2xl">A: We specialize in providing a range of services tailored to meet our clients' needs. Our offerings include comprehensive consulting, digital solutions, project management, and specialized support services designed to ensure seamless operations and strategic growth.</p>
-                        <hr class="border-1 border-gray-300 my-6">
                     </div>
                 </div>
             </div>
