--- a/contact.html
+++ b/contact.html
@@ -66,14 +66,14 @@
               </div>    
         </div>
          
-         <!-- Rankings  -->
+         <!-- Contact form  -->
         <div>
             <div class="py-4">
                 <h2 class="pt-12 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">Please fill out the form below.</h2>
                 <h2 class="pb-12 pt-3 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#101010] font-semibold">And our team will get back <br>
                     to you as soon as possible.</h2>
             </div>
-            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">
+            <div class="rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">
                 <p class="text-[#101010] font-semibold text-xl md:text-3xl lg:text-4xl text-center"> SUBMIT YOUR TOP 10 POUND FOR POUND LIST BELOW. <br>
                 BY PLACING EACH BOXER IN THE POSITION THEY BELONG.
                 </p>
@@ -111,93 +111,6 @@
                 </div>                  
             </div>
         </div>
-
-        <!-- PlayerBox -->
-        <div class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 px-8 py-2 items-center bg-gray-100 col-span-2">
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
-                    <div id="scrollContainer" class="h-[72rem] overflow-y-scroll">
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>15 - 0 (10 KO) </h2>
-                                </div>
-                           </div>
-                        </div>
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
-                            </h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">TEOFIMO 'THE TAKEOVER' LOPEZ
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG (1).png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>21 - 1 (13 KO) </h2>
-                                </div>
-                           </div>
-                        </div>
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>15 - 0 (10 KO) </h2>
-                                </div>
-                           </div>
-                        </div>
-                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                           <div class="px-4">
-                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
-                                    </p>
-                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
-                                </div>
-                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                                    <h2>RECORD</h2>
-                                    <h2>15 - 0 (10 KO) </h2>
-                                </div>
-                           </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-               <!-- Scroll buttons -->
-            <div class="absolute top-1/2 right-[-2rem] md:right-[-1rem] lg:right-[1px] flex items-center gap-2">
-                <div class="flex flex-col space-y-2">
-                    <button id="scrollUp" class="p-2 hover:shadow text-4xl">
-                        <i class="fa-solid fa-arrow-up"></i>
-                    </button>
-                    <button id="scrollDown" class="p-2 hover:shadow text-4xl">
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </button>
-                </div>
-                <img src="./img/Black.png" class="w-5" alt="">
-            </div>
-         </div>
         
 
         <!-- FooterUp Section  -->
