footer modified on index.html file

--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
     <!-- Footer here -->
     <div class="bg-[#101010]">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-white gap-4 p-8">
-            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">Terms and conditions</p>
-            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">privacy policy</p>
-            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">cookie policy</p>
-            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">Send Us Feedback</p>
+            <a href="#" class="text-xl md:text-2xl lg:text-2xl text-center uppercase">Terms and conditions</a>
+            <a href="#" class="text-xl md:text-2xl lg:text-2xl text-center uppercase">privacy policy</a>
+            <a href="#" class="text-xl md:text-2xl lg:text-2xl text-center uppercase">cookie policy</a>
+            <a href="/contact.html" class="text-xl md:text-2xl lg:text-2xl text-center uppercase">Contact Us</a>
         </div>
         <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase text-white pb-3">c boxingpoll 2024. all rights reserved</p>
     </div>
