--- a/contact.html
+++ b/contact.html
@@ -76,13 +76,20 @@
             <div class="rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">               
                 <form class="max-w-xl mx-auto">
                     <label for="countries" class="block mb-3 text-2xl lg:text-4xl md:text-4xl text-[#101010]">Subject</label>
-                    <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-500 text-xl rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-4">
-                
+                    <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-500 text-xl rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-4 mb-4">
                         <option>Please select a subject for your message .</option>
                         <option>Canada</option>
                         <option>France</option>
                         <option>Germany</option>
                     </select>
+
+                    <label for="countries" class="block my-3 text-2xl lg:text-4xl md:text-4xl text-[#101010]">Name</label>
+                    <div class="flex">
+                        <span class="inline-flex items-center px-4 text-sm text-gray-900 bg-gray-200 border border-e-0 border-gray-300 rounded-s-md">
+                            <i class="fa-regular fa-user text-xl"></i>
+                        </span>
+                        <input type="text" id="website-admin" class="rounded-none rounded-e-lg bg-gray-50 border border-gray-300 text-gray-900 focus:ring-blue-500 focus:border-blue-500 block flex-1 min-w-0 w-full text-xl placeholder:text-gray-500 p-4" placeholder="Please enter your name here.">
+                      </div>
                 </form>
                                 
             </div>
