added from page

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <h2 class="pb-12 pt-3 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#101010] font-semibold">And our team will get back <br>
                     to you as soon as possible.</h2>
             </div>
-            <div class="rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">               
+            <div class="rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100 shadow">               
                 <form class="">
                     <div class="max-w-xl mx-auto">
                         <label for="countries" class="block mb-3 text-xl text-[#101010]">Subject</label>
@@ -109,8 +109,9 @@
                         <label for="countries" class="block my-3 text-xl text-[#101010]">Message</label>
                         <textarea id="message" rows="8" class="block p-4 w-full text-lg placeholder:text-gray-500 text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500" placeholder="Please enter your message here."></textarea>
                     </div>
-
-                    <button>Subn=mit</button>
+                    <div class="flex mt-8 mb-4">
+                        <button class="bg-[#101010] text-white py-3 px-16 text-2xl mx-auto">Submit</button>
+                    </div>
                 </form>
                                 
             </div>
