--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <h2 class="pb-12 pt-3 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#101010] font-semibold">And our team will get back <br>
                     to you as soon as possible.</h2>
             </div>
-            <div class="rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100 shadow">               
+            <div class="rounded-xl mt-4 mb-8 lg:mt-6 lg:mb-14 p-6 items-center bg-gray-100 shadow">               
                 <form class="">
                     <div class="max-w-xl mx-auto">
                         <label for="countries" class="block mb-3 text-xl text-[#101010]">Subject</label>
